--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,7 +7,8 @@
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:src="@drawable/boat" />
+        android:src="@drawable/logo"
+        android:contentDescription="@string/logo"/>
 
     <TextView
         android:id="@+id/textView"
