--- a/app/src/main/res/layout/activity_candidate.xml
+++ b/app/src/main/res/layout/activity_candidate.xml
@@ -4,15 +4,18 @@
     android:layout_height="match_parent">
 
     <SearchView
+        android:id="@+id/serchview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="60dp" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/CardView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
