--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -118,7 +118,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="27dp"
         android:layout_marginBottom="147dp"
-        android:text="lorem_ipsum_is_simply_text_of_the_printing_and_typesetting_industry_lorem_ips"
+        android:text="lorem ipsum is simply text of the printing and typesetting industr lorem ips"
         android:textColor="#000000"
         android:textSize="16sp" />
 
