--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,52 @@
     android:layout_height="match_parent"
 
     tools:context=".MainActivity">
+    <!-- Header Section -->
 
 
+
+
+
+
+    <!-- Navigation Bar -->
+    <LinearLayout
+        android:id="@+id/navigationLayout"
+        android:layout_width="411dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="-100dp"
+        android:layout_marginEnd="0dp"
+        android:background="@color/blue"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <include layout="@layout/navigation_bar" />
+
+
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/prView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
-        android:id="@+id/prView"
-        />
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:background="@color/blue"/>
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="131dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        app:srcCompat="@drawable/mainlogo" />
+        android:layout_below="@+id/navigationLayout"
+        android:layout_marginTop="8dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:clipToPadding="false"
+        tools:listitem="@layout/post_layout" />
+    <!--<TextView-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="50dp"-->
+<!--    android:background="@color/blue"/>-->
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView3"-->
+<!--        android:layout_width="131dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginLeft="0dp"-->
+<!--        android:layout_marginTop="0dp"-->
+<!--        app:srcCompat="@drawable/mainlogo" />-->
 
 
 
