--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -3,20 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="409dp"
-        android:layout_height="172dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="185dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+      >
 
         <ImageView
             android:id="@+id/userImg"
             android:layout_width="130dp"
             android:layout_height="130dp"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+
+            />
 
         <TextView
             android:id="@+id/userName"
@@ -30,7 +31,7 @@
         <TextView
             android:id="@+id/postDescription"
             android:layout_width="229dp"
-            android:layout_height="62dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="150dp"
             android:layout_marginTop="65dp"
             android:text="TextView" />
