--- a/app/src/main/res/layout-land/activity_candidate.xml
+++ b/app/src/main/res/layout-land/activity_candidate.xml
@@ -17,8 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/serchview"
-        android:layout_marginTop="8dp" />
-
+        android:layout_marginTop="8dp"
+        android:numColumns="auto_fit"
+        android:columnWidth="150dp"
+        android:horizonalSpacing="8dp"
+        android:verticalSpacing="8dp"/>
 
 
 </RelativeLayout>
