--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -25,7 +25,9 @@
     <!--        android:orientation="horizontal"-->
     <!--        android:padding="8dp">-->
 
-    <include layout="@layout/navigation_bar" />
+    <include
+        layout="@layout/navigation_bar"
+       />
 
 
 
@@ -33,13 +35,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/prView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/navigationLayout"
         android:layout_marginTop="8dp"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:clipToPadding="false"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         tools:listitem="@layout/post_layout" />
     <!--<TextView-->
     <!--    android:layout_width="match_parent"-->
