--- a/app/src/main/res/layout-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-land/activity_sign_up.xml
@@ -4,57 +4,65 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-
     android:padding="16dp"
     android:visibility="visible">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="32dp"
         android:src="@drawable/mainlogo" />
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
 
     <EditText
         android:id="@+id/FullName"
         android:layout_width="match_parent"
-        android:layout_height="49dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="16dp"
         android:hint="Full Name" />
 
     <EditText
         android:id="@+id/Email"
         android:layout_width="match_parent"
-        android:layout_height="49dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="16dp"
         android:hint="Email" />
 
     <EditText
         android:id="@+id/Password"
         android:layout_width="match_parent"
-        android:layout_height="49dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="16dp"
         android:hint="Password" />
 
     <EditText
         android:id="@+id/confPassword"
         android:layout_width="match_parent"
-        android:layout_height="49dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="16dp"
         android:hint="Confirm Password" />
-
+    </LinearLayout>
     <Button
         android:id="@+id/buttonSignUp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="290dp"
         android:text="Sign Up" />
 
     <TextView
         android:id="@+id/SignIn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have an account? Sign In"
+        android:layout_marginLeft="250dp"
         android:textAlignment="center"
         android:textColor="@color/blue" />
 
