--- a/app/src/main/res/layout-land/candidate_list.xml
+++ b/app/src/main/res/layout-land/candidate_list.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <!-- Include Navigation Bar -->
     <include
         layout="@layout/navigation_bar"
         android:id="@+id/navigation"/>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
     app:cardElevation="4dp"
     app:cardCornerRadius="8dp"
-    android:layout_margin="8dp"
     android:layout_below="@+id/navigation">
 
 
@@ -30,31 +31,29 @@
             android:scaleType="centerCrop" />
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:layout_marginStart="8dp">
+            android:layout_marginStart="16dp">
 
             <TextView
                 android:id="@+id/user_name"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Name"
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/user_exp"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Experience"
                 android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/user_email"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginTop="8dp"
                 android:text="Email"
@@ -62,4 +61,4 @@
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
-</RelativeLayout>
+</LinearLayout>
