--- a/app/src/main/res/layout-land/activity_candidate.xml
+++ b/app/src/main/res/layout-land/activity_candidate.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="8dp"
         android:numColumns="auto_fit"
         android:columnWidth="150dp"
-        android:horizonalSpacing="8dp"
+        android:horizontalSpacing="8dp"
         android:verticalSpacing="8dp"/>
 
 
